--- a/frontend/src/pages/Listing/Listing.scss
+++ b/frontend/src/pages/Listing/Listing.scss
@@ -10,6 +10,10 @@
 
   .listing-image {
     align-self: center;
+
+    img {
+      width: 100%;
+    }
   }
 
   .listing-info {
